--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <bds />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <title>BigDevSoon - Quiz App Project</title>
+    <title>Quiz web Project</title>
   </head>
   <body>
     <main id="quiz-container">
